--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailersend": "^2.3.0",
     "mailgun-js": "^0.22.0",
+    "mongodb": "^6.13.0",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
@@ -29,12 +30,13 @@
   "scripts": {
     "build": "cd frontend && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "12.4.0",
-    "npm": "6.9.0"
-  }
+  "node": "20.17.0",
+  "npm": "10.8.2"
+}
+
 }
