--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "main": "index.js",
   "scripts": {
   "build": "cd frontend && npm install && npm run build",
-  "start": "npm run build && node backend/server.js",
+  "start": "node backend/server.js"
 },
   "author": "",
   "license": "ISC",
